; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_i386-tdep.c_i386_pseudo_register_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_i386-tdep.c_i386_pseudo_register_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }
%struct.regcache = type { i32 }

@MAX_REGISTER_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gdbarch*, %struct.regcache*, i32, i8*)* @i386_pseudo_register_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i386_pseudo_register_write(%struct.gdbarch* %0, %struct.regcache* %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.gdbarch*, align 8
  %6 = alloca %struct.regcache*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.gdbarch* %0, %struct.gdbarch** %5, align 8
  store %struct.regcache* %1, %struct.regcache** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %12 = load %struct.gdbarch*, %struct.gdbarch** %5, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i64 @i386_mmx_regnum_p(%struct.gdbarch* %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %36

16:                                               ; preds = %4
  %17 = load i32, i32* @MAX_REGISTER_SIZE, align 4
  %18 = zext i32 %17 to i64
  %19 = call i8* @llvm.stacksave()
  store i8* %19, i8** %9, align 8
  %20 = alloca i8, i64 %18, align 16
  store i64 %18, i64* %10, align 8
  %21 = load %struct.regcache*, %struct.regcache** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @i386_mmx_regnum_to_fp_regnum(%struct.regcache* %21, i32 %22)
  store i32 %23, i32* %11, align 4
  %24 = load %struct.regcache*, %struct.regcache** %6, align 8
  %25 = load i32, i32* %11, align 4
  %26 = call i32 @regcache_raw_read(%struct.regcache* %24, i32 %25, i8* %20)
  %27 = load i8*, i8** %8, align 8
  %28 = load %struct.gdbarch*, %struct.gdbarch** %5, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @register_size(%struct.gdbarch* %28, i32 %29)
  %31 = call i32 @memcpy(i8* %20, i8* %27, i32 %30)
  %32 = load %struct.regcache*, %struct.regcache** %6, align 8
  %33 = load i32, i32* %11, align 4
  %34 = call i32 @regcache_raw_write(%struct.regcache* %32, i32 %33, i8* %20)
  %35 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %35)
  br label %41

36:                                               ; preds = %4
  %37 = load %struct.regcache*, %struct.regcache** %6, align 8
  %38 = load i32, i32* %7, align 4
  %39 = load i8*, i8** %8, align 8
  %40 = call i32 @regcache_raw_write(%struct.regcache* %37, i32 %38, i8* %39)
  br label %41

41:                                               ; preds = %36, %16
  ret void
}

declare dso_local i64 @i386_mmx_regnum_p(%struct.gdbarch*, i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @i386_mmx_regnum_to_fp_regnum(%struct.regcache*, i32) #1

declare dso_local i32 @regcache_raw_read(%struct.regcache*, i32, i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @register_size(%struct.gdbarch*, i32) #1

declare dso_local i32 @regcache_raw_write(%struct.regcache*, i32, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
